# openfast-adapter

./: README.md
.github/workflows/: build.yml
cases/cfd-turbine/: README.md  precice-config.xml
cases/cfd-turbine/fluid/: Allclean  Allrun  clean.sh  run.sh
cases/cfd-turbine/fluid/0.org/: U  p
cases/cfd-turbine/fluid/precice-profiling/: Fluid-0-1.json
cases/cfd-turbine/fluid/system/: controlDict  createPatchDict  fvOptions  mapFieldsDict  preciceDict  topoSetDict
cases/cfd-turbine/openfast/: cDriver.i  clean.sh  coupled-openfast.cpp  preciceInput.i  run.sh
cases/cfd-turbine/openfast/precice-profiling/: Solid-0-1.json
cases/dummy-turbine/: README.md
cases/dummy-turbine/fluid/: CMakeLists.txt  clean.sh
cases/dummy-turbine/openfast/: clean.sh  run.sh
cases/fixed-turbine/: README.md  precice-config.xml
cases/fixed-turbine/fluid/: README.md  clean.sh  fluid-solver.cpp  run.sh
cases/fixed-turbine/openfast/: CMakeLists.txt  cDriver.i  clean.sh  coupled-openfast  coupled-openfast.cpp  precice-Solid-Turbine-events.json  precice-Solid-events.json  precice-SolverOne-events.json  preciceInput.yaml  run.sh
cases/fixed-turbine/openfast/nrel5mw/: nrel_5mw.fst
input/nrel5mw/: nrel5mw-grasp.fst  nrel5mw-onshore.fst
input/nrel5mw_openbc/: nrel_5mw.AD.sum  nrel_5mw.ED.sum  nrel_5mw.ech  nrel_5mw.fst  nrel_5mw.outb  nrel_5mw.sum
src/: Allclean  Allmake  CMakeLists.txt  coupled-openfast.cpp  openfast-adapter.cpp
